tests/parser/bad/variable_use/5.lat
class A {
    int a;
    int b;
    int c;
}

int main() {
    A a = new A;
    return b.b;
}